--- a/magic_cake.html
+++ b/magic_cake.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Recipes World</h1>
 
-    <ul>
+    <ul class="nav">
         <li><a href="home.html">Home</a></li>
         <li><a href="recipes.html">Recipes</a></li>
         <li><a href="suggest.html">Suggest</a></li>
