--- a/suggest.html
+++ b/suggest.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Suggest</title>
 </head>
 <body>
     <h1>Recipes World</h1>
-    <ul>
+    <ul class="nav">
         <li><a href="home.html">Home</a></li>
         <li><a href="recipes.html">Recipes</a></li>
         <li><a href="suggest.html">Suggest</a></li>
