--- a/recipes.html
+++ b/recipes.html
@@ -19,6 +19,18 @@
             <h3><a href="magic_cake.html">Magic Cake</a></h3>
             <p>This is a dangerously delicous cake</p>
         </li>
+        <li>
+            <h3><a href="tacosaurus_mex.html">Tacosaurus Mex</a></h3>
+            <p>It's always taco night somewhere!</p>
+        </li>
+        <li>
+            <h3><a href="florida_omelette.html">Florida Omelette</a></h3>
+            <p>Omelette you in on a little secret - this is one tasty egg</p>
+        </li>
+        <li>
+            <h3><a href="mystery_wich.html">Mystery Wich</a></h3>
+            <p>It's a sandwich. That's all we can really say right now</p>
+        </li>
     </ul>
 </body>
 </html>
