Add class .recipes and set ul padding 0, li no o

--- a/recipes.html
+++ b/recipes.html
@@ -14,7 +14,7 @@
         <li><a href="suggest.html">Suggest</a></li>
     </ul>
     <h2>Recipes</h2>
-    <ul>
+    <ul class="recipes">
         <li>
             <h3><a href="magic_cake.html">Magic Cake</a></h3>
             <p>This is a dangerously delicous cake</p>
