--- a/magic_cake.html
+++ b/magic_cake.html
@@ -7,30 +7,34 @@
     <title>Magic Cake</title>
 </head>
 <body>
-    <h1>Recipes World</h1>
+    <div class="header">
+        <h1>Recipes World</h1>
 
-    <ul class="nav">
-        <li><a href="home.html">Home</a></li>
-        <li><a href="recipes.html">Recipes</a></li>
-        <li><a href="suggest.html">Suggest</a></li>
-    </ul>
+        <ul class="nav">
+            <li><a href="home.html">Home</a></li>
+            <li><a href="recipes.html">Recipes</a></li>
+            <li><a href="suggest.html">Suggest</a></li>
+        </ul>
+    </div>
 
-    <h2>Magic Cake</h2>
-    <p>
-        Magic cake is the tastiest cake on the planet.
-        Few have tried it and survivied to tell how delicous it is.  
-    </p>
-    <h3>Ingredients</h3>
-    <ul>
-        <li>10 eggs</li>
-        <li>2 pound of sugar</li>
-        <li>3 sticks of butter</li>
-    </ul>
-    <h3>Directions</h3>
-    <ol>
-        <li>Mix eggs, sugar and buttter in a large bowl</li>
-        <li>Put into the hover</li>
-        <li>Eat and enjoy</li>
-    </ol>
+    <div class="main-content">
+        <h2>Magic Cake</h2>
+        <p>
+            Magic cake is the tastiest cake on the planet.
+            Few have tried it and survivied to tell how delicous it is.  
+        </p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>10 eggs</li>
+            <li>2 pound of sugar</li>
+            <li>3 sticks of butter</li>
+        </ul>
+        <h3>Directions</h3>
+        <ol>
+            <li>Mix eggs, sugar and buttter in a large bowl</li>
+            <li>Put into the hover</li>
+            <li>Eat and enjoy</li>
+        </ol>
+    </div>
 </body>
 </html>
