--- a/recipes.html
+++ b/recipes.html
@@ -7,14 +7,18 @@
     <title>Recipes</title>
 </head>
 <body>
-    <h1>Recipes World</h1>
-    <ul class="nav">
-        <li><a href="home.html">Home</a></li>
-        <li><a href="recipes.html">Recipes</a></li>
-        <li><a href="suggest.html">Suggest</a></li>
-    </ul>
+    <div class="header">
+        <h1>Recipes World</h1>
+        <ul class="nav">
+            <li><a href="home.html">Home</a></li>
+            <li><a href="recipes.html">Recipes</a></li>
+            <li><a href="suggest.html">Suggest</a></li>
+        </ul>
+    </div>
+    
+    <div class="main-content">
     <h2>Recipes</h2>
-    <ul class="recipes">
+        <ul class="recipes">
         <li>
             <h3><a href="magic_cake.html">Magic Cake</a></h3>
             <p>This is a dangerously delicous cake</p>
@@ -32,5 +36,6 @@
             <p>It's a sandwich. That's all we can really say right now</p>
         </li>
     </ul>
+    </div>
 </body>
 </html>
