--- a/suggest.html
+++ b/suggest.html
@@ -7,12 +7,16 @@
     <title>Suggest</title>
 </head>
 <body>
-    <h1>Recipes World</h1>
-    <ul class="nav">
-        <li><a href="home.html">Home</a></li>
-        <li><a href="recipes.html">Recipes</a></li>
-        <li><a href="suggest.html">Suggest</a></li>
-    </ul>
-    <h2>Suggest</h2>
+    <div class="header">
+        <h1>Recipes World</h1>
+        <ul class="nav">
+            <li><a href="home.html">Home</a></li>
+            <li><a href="recipes.html">Recipes</a></li>
+            <li><a href="suggest.html">Suggest</a></li>
+        </ul>
+    </div>
+    <div class="main-content">
+        <h2>Suggest</h2>
+    </div>
 </body>
 </html>
