Add photos section in magic_cake (new class .photos)

--- a/magic_cake.html
+++ b/magic_cake.html
@@ -35,6 +35,12 @@
             <li>Put into the hover</li>
             <li>Eat and enjoy</li>
         </ol>
+        <h3>Your Photos</h3>
+        <ul class="photos">
+            <li><img src="images/magic_cake/1.jpeg" alt="Magic Cake Photo 1"></li>
+            <li><img src="images/magic_cake/2.jpeg" alt="Magic Cake Photo 2"></li>
+            <li><img src="images/magic_cake/3.jpeg" alt="Magic Cake Photo 3"></li>
+        </ul>
     </div>
 </body>
 </html>
