--- a/magic_cake.html
+++ b/magic_cake.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>Recipes World</h1>
+        <img src="images/logo.png" alt="Recipe World Logo">
 
         <ul class="nav">
             <li><a href="home.html">Home</a></li>
