--- a/suggest.html
+++ b/suggest.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>Recipes World</h1>
+        <img src="images/logo.png" alt="Recipe World Logo">
         <ul class="nav">
             <li><a href="home.html">Home</a></li>
             <li><a href="recipes.html">Recipes</a></li>
