Add magic_cake photo in recipes.html and its css

--- a/recipes.html
+++ b/recipes.html
@@ -20,6 +20,7 @@
     <h2>Recipes</h2>
         <ul class="recipes">
         <li>
+            <img src="images/magic_cake/1.jpeg" alt="Magic Cake Photo">
             <h3><a href="magic_cake.html">Magic Cake</a></h3>
             <p>This is a dangerously delicous cake</p>
         </li>
