--- a/recipes.html
+++ b/recipes.html
@@ -20,19 +20,22 @@
     <h2>Recipes</h2>
         <ul class="recipes">
         <li>
-            <img src="images/magic_cake/1.jpeg" alt="Magic Cake Photo">
+            <img src="images/magic_cake/3.jpeg" alt="Magic Cake Photo">
             <h3><a href="magic_cake.html">Magic Cake</a></h3>
             <p>This is a dangerously delicous cake</p>
         </li>
         <li>
+            <img src="images/taco/taco.jpg" alt="Tacosaurus Photo">
             <h3><a href="tacosaurus_mex.html">Tacosaurus Mex</a></h3>
             <p>It's always taco night somewhere!</p>
         </li>
         <li>
+            <img src="images/omelette/omelette.jpg" alt="Omelette Photo">
             <h3><a href="florida_omelette.html">Florida Omelette</a></h3>
             <p>Omelette you in on a little secret - this is one tasty egg</p>
         </li>
         <li>
+            <img src="images/sandwich/sandwich.jpg" alt="Sandwich Photo">
             <h3><a href="mystery_wich.html">Mystery Wich</a></h3>
             <p>It's a sandwich. That's all we can really say right now</p>
         </li>
