Add featured image in home

--- a/home.html
+++ b/home.html
@@ -18,6 +18,9 @@
 
     <div class="main-content">
         <h2>Home</h2>
+        <div class="featured-image">
+            <h3>Featured: Magic Cake</h3>
+        </div>
     </div>
 </body>
 </html>
