Add div footer in all pages

--- a/magic_cake.html
+++ b/magic_cake.html
@@ -42,5 +42,8 @@
             <li><img src="images/magic_cake/3.jpeg" alt="Magic Cake Photo 3"></li>
         </ul>
     </div>
+    <div class="footer">
+        <p>&copy; 2024 - Recipe World</p>
+    </div>
 </body>
 </html>
