--- a/recipes.html
+++ b/recipes.html
@@ -41,5 +41,8 @@
         </li>
     </ul>
     </div>
+    <div class="footer">
+        <p>&copy; 2024 - Recipe World</p>
+    </div>
 </body>
 </html>
