--- a/suggest.html
+++ b/suggest.html
@@ -18,5 +18,8 @@
     <div class="main-content">
         <h2>Suggest</h2>
     </div>
+    <div class="footer">
+        <p>&copy; 2024 - Recipe World</p>
+    </div>
 </body>
 </html>
