--- a/home.html
+++ b/home.html
@@ -22,5 +22,8 @@
             <h3>Featured: Magic Cake</h3>
         </div>
     </div>
+    <div class="footer">
+        <p>&copy; 2024 - Recipe World</p>
+    </div>
 </body>
 </html>
