--- a/suggest.html
+++ b/suggest.html
@@ -17,6 +17,26 @@
     </div>
     <div class="main-content">
         <h2>Suggest</h2>
+        <form action="">
+            <label for="recipe-name">Recipe Name</label>
+            <input type="text" id="recipe-name">
+
+            <label for="ingredients">Ingredients</label>
+            <textarea id="ingredients"></textarea>
+
+            <label for="name">Your Name</label>
+			<input type="text" id="name">
+				
+			<label for="email">Your Email</label>
+			<input type="text" id="email">
+
+            <div>
+            <label for="newsletter">Get Newsletter?</label>
+			<input type="checkbox" id="newsletter">
+            </div>
+            
+            <input type="submit" value="Click to Submit">
+        </form>
     </div>
     <div class="footer">
         <p>&copy; 2024 - Recipe World</p>
